Refactoring Plex's now playing view

--- a/status/templates/index.html
+++ b/status/templates/index.html
@@ -53,12 +53,8 @@
             </div>
             <!-- Center Area -->
             <div class="col-md-6">
-              <div id="now_playing_title">
-                <h1 class="exoextralight">Now Playing</h1>
-                <hr>
+              <div id="now_playing_wrapper">
               </div>
-              <div id="now_playing">
-              </div>             <hr class="visible-xs visible-sm">
             </div>
             <!-- Right sidebar -->
             <div class="col-md-3" id="right_sidebar">
