--- a/status/templates/index.html
+++ b/status/templates/index.html
@@ -91,12 +91,13 @@
     <script src="//code.jquery.com/jquery.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
     <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
     <script>
     $(document).ready(function() {
       $('[rel=tooltip]').tooltip();
       $('[rel=popover]').popover();
-      loadStatus();
+      setupSocketIO();
     })
     </script>
     {{ flask_util_js.js }}
