Fixing weather template error, adding the degree symbol when appropriate

--- a/status/templates/forecast.html
+++ b/status/templates/forecast.html
@@ -2,7 +2,7 @@
 	<li><h1 data-icon="{{ weather['icon'] }}" class="weather-icon"></h1></li>
 	<li>
 		<ul class="list-unstyled">
-			<li><h1 class="exoregular" class="temperature">{{ weather['temperature'] }}</h1></li>
+			<li><h1 class="exoregular" class="temperature">{{ weather['temperature'] }}°</h1></li>
 			<li><h4 class="exoregular" class="temperature weather-summary">{{ weather['summary'] }}</h4></li>
 		</ul>
 	</li>
